--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -8,20 +8,6 @@ jobs:
   e2e-tests:
     runs-on: ubuntu-latest
 
-    services:
-      strapi:
-        image: node:18
-        options: >-
-          --health-cmd "curl -f http://localhost:1337 || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 1337:1337
-        volumes:
-          - .:/app
-        command: sh -c "cd /app && pnpm install && pnpm dev"
-
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
@@ -34,22 +20,11 @@ jobs:
       - name: Instalar pnpm
         run: npm install -g pnpm
 
-      - name: Instalar dependências
+      - name: Instalar dependências do projeto
         run: pnpm install
 
       - name: Instalar navegadores do Playwright
         run: pnpm dlx playwright install
 
-      - name: Aguardar Strapi estar no ar
-        run: |
-          for i in {1..30}; do
-            if curl -s http://localhost:1337/admin | grep -q "Strapi"; then
-              echo "Strapi está no ar!"
-              break
-            fi
-            echo "Aguardando Strapi iniciar..."
-            sleep 5
-          done
-
-      - name: Rodar testes
-        run: pnpm exec playwright test
+      - name: Rodar Strapi + Playwright simultaneamente
+        run: pnpm run test:e2e
