--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -2,7 +2,7 @@ name: Testes E2E com Playwright
 
 on:
   pull_request:
-    branches: [master]
+    branches: [main, master]
 
 jobs:
   e2e-tests:
@@ -25,6 +25,18 @@ jobs:
 
       - name: Instalar navegadores do Playwright
         run: pnpm dlx playwright install
+
+      - name: Criar arquivo .env para o Strapi
+        run: |
+          echo "HOST=0.0.0.0" >> .env
+          echo "PORT=1337" >> .env
+          echo "APP_KEYS=ImJMpHjnCdJw4ii7jZzCXQ==,Jg239VoMach6Fh2LAH6ydA==,LAdmPTwE8oqyVjAV4pCkBQ==,f1gPGngKmE5xhyDktSpCVw==" >> .env
+          echo "API_TOKEN_SALT=X2d0C6rgXwWgwEZCslZN0A==" >> .env
+          echo "ADMIN_JWT_SECRET=deEi8rGl7WB43uXiaYPaOg==" >> .env
+          echo "TRANSFER_TOKEN_SALT=vhsZEWfU3anLONbLZXZfqg==" >> .env
+          echo "DATABASE_CLIENT=sqlite" >> .env
+          echo "DATABASE_FILENAME=.tmp/data.db" >> .env
+          echo "JWT_SECRET=U2Nh9O8oDdw6gzXqWbg5Eg==" >> .env
 
       - name: Rodar Strapi + Playwright simultaneamente
         run: pnpm run test:e2e
