--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "console": "strapi console",
     "deploy": "strapi deploy",
     "dev": "strapi develop",
-    "test:e2e": "concurrently -k -s first -n strapi,tests -c yellow,cyan \"pnpm dev\" \"wait-on http://localhost:1337/admin --timeout 30000 && pnpm exec playwright test\"",
+    "playwright:test": "playwright test",
+    "wait-and-test": "node ./scripts/waitThenTest.js",
+    "test:e2e": "concurrently -k -s first -n strapi,tests -c yellow,cyan \"pnpm dev || true\" \"pnpm wait-and-test\"",
     "develop": "strapi develop",
     "seed:example": "node ./scripts/seed.js",
     "start": "strapi start",
@@ -32,8 +34,8 @@
     "@playwright/test": "^1.52.0",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
     "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
     "typescript": "^5",
     "wait-on": "^8.0.3"
   },
